# apple-eventkit-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: setup_permissions.py
src/apple_eventkit_mcp/: __init__.py  calendar_tools.py  eventkit_store.py  permissions.py  reminder_tools.py  server.py  tags.py
